<resources>
    <!--<string name="app_name">Novoz App</string>-->
    <string name="app_name">Навигатор Новозыбкова</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="city_name">Город новозыбков</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_position">Search position</string>
    <string name="todo">TODO</string>
    <string name="open_float_toolbar">Open the Floating Toolbar</string>
    <string name="close_float_toolbar">Close the Floating Toolbar</string>
    <string name="open_search_view">Open and Close Search View</string>

    <string name="image_monument">Image of monument</string>
    <string name="monument_name">Monument name</string>
    <string name="like_monument">To like monument</string>
    <string name="image_principal_monut">Image publication of monument</string>

    <string name="pledge_mock" translatable="false">$150</string>
    <string name="pledge_badge" translatable="false">Pledge</string>
    <string name="weight_mock" translatable="false">50 oz</string>
    <string name="weight_badge" translatable="false">Weight</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="requests_count_badge" translatable="false">Requests</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="monument_architect" translatable="false">Architect</string>
    <string name="title_description">Description</string>
    <string name="description_title">Описание</string>
    <string name="small_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
                        consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra.
    </string>
    <string name="request_btn_text" translatable="false">Request</string>

    <!-- Single Place -->
    <string name="no_weather">Weather Unavailable</string>
    <string name="city_history">История горoда</string>
    <string name="history_city">История</string>
    <string name="monument_city">Памятники</string>

    <string name="part_history_1">
        <em>Новозыбков</em> – город в Брянской области России, административный центр Новозыбковского
        района и Новозыбковского городского округа, в 207 км к юго-западу от Брянска. Расположен в пределах
        Приднепровской низменности. Железнодорожная станция на линии Брянск-Гомель; от Новозыбкова – ветка к г.
        Новгород-Северский. Численность населения города – около 43 тысяч человек (по состоянию на 1992 год в
        России насчитывалось 402 города, больших Новозыбкова по численности населения, и 648 городов, меньших Новозыбкова).
        Площадь города в пределах городской черты составляет 3413 га (это в 500 000 раз меньше площади России,
        в 17 раз больше площади государства Монако, и в 85 раз больше площади государства Ватикан).
    </string>
    <string name="part_history_2">
        \nПоселение на месте Новозыбкова известно с середины XVII века; в 1701 году на месте современного города существовала слобода Зыбкая, основанная старообрядцами, бежавшими от преследований господствующей церкви. 12(23) сентября 1701 года стародубский полковник М.А.Миклашевский выдал осадной лист, в котором предписал сотнику.
        \n\nТопальской сотни «на урочище Зыбкой, межи Тростаною и иными селцами, над речкою Корною... вновь слободку до ласки войсковой осадити людми...». По описанию 1781 г., слобода Зыбкая «положение имеет по обеим сторонам протока Зыбкой, на котором плотина и мельница, а поузъ самое селение течет другой проток Корна, на котором плотина об одном амбаре». Население проживало в 373 дворах, где размещалось 528 хат, и в 77 бездворных хатах.
        \n\nЦерквей было две – Спаса Преображения, нач. XVIII в. (не сохранилась) и Рождества Богородицы в Людковщине, 1754 г. (восстанавливается). Все постройки слободы были деревянными. Дважды в неделю в Зыбкой проводились торги, а четыре раза в год – ярмарки, на которых торговали кожами, сапогами, скотом, телегами (было развито кустарное производство телег и бричек), пенькой, льном, мехами.
        \n\nНовозыбков в 1913 годуВ 1809 года слобода Зыбкая преобразуется в уездный город Новозыбков Черниговской губернии (вместо выведенного за штат города Новое Место, ныне – село в 6 км от Новозыбкова).
        \n\nВ 1826 году утвержден генеральный план города, скорректированный в 1840 г. В XIX - начале XX вв. Новозыбков был крупнейшим центром производства спичек (первая фабрика была построена в 1864 г.; позднее в городе и уезде действовало 8 спичечных фабрик, производивших 290 млн. коробок спичек в год). В 1887 году через город прошла Брянско-Гомельская железная дорога, в 1899 году – железная дорога Новозыбков – Новгород-Северский; были открыты женская гимназия, реальное и сельскохозяйственное техническое училища.
        \n\nК 1895 году в Новозыбкове насчитывалось 119 каменных и 1692 деревянных здания, 165 торговых лавок, 9 гостиниц, 30 заводов, в том числе 3 кожевенных, мыловаренные, канатные, кирпичные, гончарные, маслобойные; из существовавших тогда восьми церквей – две каменные и шесть деревянных.
        \n\nПосле Октябрьской революции застройка города продолжалась в границах плана 1840 г. Значительно расширилась спичечная промышленность, построены консервный завод и промкомбинат. В 1930 году на базе политехникума открыт Новозыбковский пединститут; в этом же году вышел первый номер районной газеты "Ударник" (с 1962 г. – "Маяк").
        \n\nВо время Великой Отечественной войны 1941-45 гг. Новозыбков был оккупирован с 16 августа 1941 г. по 25 сентября 1943 г. немецко-фашистскими войсками. В новозыбковских лесах началось формирование партизанского соединения А.Ф. Федорова.
        \n\nЗа время немецко-фашистской оккупации все предприятия были уничтожены. В послевоенный период в первую очередь восстанавливалась промышленность города. На месте бывшей спичечной фабрики "Волна Революции" были выстроены корпуса станкостроительного завода. Отстроены консервный завод, швейная и обувная фабрики, предприятия местной и кооперативной промышленности. К 1968 году население города достигло 30 тыс. человек.
        \n\nТерритория, на которой расположен Новозыбков, со времени возникновения Русского государства и до нашествия татар входила в состав Киевской Руси, затем была в составе Великого княжества Литовского, Московского княжества, Польши, Киевской, Малороссийской и Черниговской губерний России, а с 1919 года – в составе Российской Федерации: в Гомельской губернии (до 1926 г.), в Брянской губернии (до 1929 г.), в Западной области (до 1937 г.), Орловской области (до 1944 г.), а с 1944 г. и по настоящее время – в Брянской области.
    </string>
    <string name="part_history_3">
        Сегодня Новозыбков – третий по величине город Брянской области, город областного подчинения.
        \n\nКрупнейшие предприятия города – завод «Индуктор» (производство электротермического оборудования), станкостроительный завод (деревообрабатывающие станки), швейная и швейно-трикотажная фабрики. Развита пищевая промышленность.
        \n\nВ городе хорошо развита система образования: работает филиал Брянского государственного университета, профессионально-педагогический колледж, медицинский колледж, 2 профессиональных училища, 11 школ.
        \n\nСеть учреждений культуры включает в себя краеведческий музей (более 3000 экспонатов), выставочный зал, 5 домов культуры, кинотеатр «Октябрь», централизованную городскую библиотечную систему, городской парк культуры и отдыха. В городе работает народный драматический театр, несколько самодеятельных творческих коллективов, клуб культурных инициатив «Зыбчане».
        \n\nС 1998 года в Новозыбкове ежегодно вручается премия «Серебряный колокольчик» за достижения в области культуры и искусства по 10 номинациям. Издаются литературные сборники новозыбковских поэтов и прозаиков. В выставочных залах музея и центральной городской библиотеки регулярно проходят выставки новозыбковских художников. Работают художественная и музыкальная школы.
        \n\nВ Новозыбкове создана одна из лучших в области база для занятий физкультурой и спортом: функционируют городской стадион «Труд», две детско-юношеские спортивные школы, 21 спортивный зал, зал пауэрлифтинга, 4 стрелковых тира, работают 227 спортивных секций и 1 городской бассейн. Хорошо развита борьба (самбо, дзюдо, русская борьба «слада»).
        \n\nПо городу курсируют автобусы по 7 маршрутам. Издаются три газеты: "Маяк" (3 номера в неделю), "Новозыбковские вести" (2 номера в неделю) и "Брянский регион" (еженедельник). Вещает городская телерадиокомпания.
        \n\nВ сентябре отмечается День города, к которому, по сложившейся с 1998 года традиции, каждый год в Новозыбкове обустраивается новый сквер.
        \n\nВ 1986 году произошла катастрофа на Чернобыльской АЭС, в результате которой Новозыбков оказался в зоне радиоактивного загрязнения. В первые годы после аварии были проведены большие дезактивационные работы. В 1992 г. Новозыбков посетил президент РФ Б.Н.Ельцин, после визита которого была разработана программа реконструкции и развития города.
    </string>

    <!-- Google Map API -->
    <string name="maps_api_key">AIzaSyBgrq4_iAhLCPp41SpJBYwm-dceHoRDSHY</string>
    <string name="descrip_zoom_out">Reduction of interface</string>
    <string name="show_description">Show all the description</string>
    <string name="title_interface">Title interface</string>
    <string name="weather_forecast">Weather Forecast</string>

    <!-- Google Analytics ID: Replace this ID with yours -->
    <string name="tracker_id"></string>
    <string name="monut_adress">Monument Adresse</string>
    <string name="monut_name">Monument name</string>
</resources>