<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardElevation="10dp"
        card_view:cardCornerRadius="@dimen/card_radius" >

        <!-- content header image -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp" >

            <ImageView
                android:id="@+id/image_monument"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_3"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/image_principal_monut" />

            <TextView
                android:id="@+id/name_monument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/monut_name"
                android:layout_toEndOf="@id/image_monument"
                android:layout_above="@+id/adress_monument" />

            <TextView
                android:id="@+id/adress_monument"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentBottom="true"
                android:text="@string/monut_adress"
                android:layout_toEndOf="@id/image_monument" />

            <!--
                <item name="android:textColor">@android:color/black</item>
                <item name="android:textSize">12sp</item>
                <item name="android:textStyle">bold</item>
            -->

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>